[gd_scene load_steps=12 format=2]

[ext_resource path="res://Textures/ball2.png" type="Texture" id=1]
[ext_resource path="res://Textures/ball1.png" type="Texture" id=2]
[ext_resource path="res://Textures/beam.png" type="Texture" id=3]
[ext_resource path="res://Textures/beam2.png" type="Texture" id=4]
[ext_resource path="res://Scripts/BeamLaunch.gd" type="Script" id=5]
[ext_resource path="res://Scenes/BeamLaunchTrail.tscn" type="PackedScene" id=6]
[ext_resource path="res://Patterns/ColorMaterial.tres" type="Material" id=7]
[ext_resource path="res://Sounds/gg.wav" type="AudioStream" id=8]

[sub_resource type="CanvasItemMaterial" id=2]
blend_mode = 1

[sub_resource type="CanvasItemMaterial" id=4]
blend_mode = 1

[sub_resource type="RectangleShape2D" id=5]
resource_local_to_scene = true

[node name="BeamLaunch" type="Area2D"]
collision_mask = 2
script = ExtResource( 5 )
launch_trail_sc = ExtResource( 6 )

[node name="Beam" type="Sprite" parent="."]
material = ExtResource( 7 )
texture = ExtResource( 3 )
region_enabled = true
region_rect = Rect2( 0, 0, 0, 32 )

[node name="Beam2" type="Sprite" parent="."]
material = SubResource( 2 )
texture = ExtResource( 4 )
region_enabled = true
region_rect = Rect2( 0, 0, 0, 32 )

[node name="BallL1" type="Sprite" parent="."]
material = ExtResource( 7 )
texture = ExtResource( 2 )

[node name="BallL2" type="Sprite" parent="."]
material = SubResource( 4 )
texture = ExtResource( 1 )

[node name="BallR1" type="Sprite" parent="."]
material = ExtResource( 7 )
texture = ExtResource( 2 )

[node name="BallR2" type="Sprite" parent="."]
material = SubResource( 4 )
texture = ExtResource( 1 )

[node name="Collision" type="CollisionShape2D" parent="."]
shape = SubResource( 5 )

[node name="ggSE" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 8 )
volume_db = 10.0

[connection signal="area_entered" from="." to="." method="_on_BeamLaunch_area_entered"]
